samples/_failures_safe/1761639391_50f352_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf44a782.c: In function ‘tokenize’:
./samples/SAFE/__tmp_cf44a782.c:175:9: error: expected expression at end of input
  175 |         if (
      |         ^~
./samples/SAFE/__tmp_cf44a782.c:175:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cf44a782.c:175:9: error: expected declaration or statement at end of input
